@@ -166,6 +166,7 @@ class Admin_Tools extends Isabelle_Scala_Tools(
   Build_JDK.isabelle_tool,
   Build_JEdit.isabelle_tool,
   Build_LIPIcs.isabelle_tool,
+  Build_LLNCS.isabelle_tool,
   Build_Minisat.isabelle_tool,
   Build_PDFjs.isabelle_tool,
   Build_PolyML.isabelle_tool1,
